--- a/app/views/workshop_invitation_mailer/invite_student.html.haml
+++ b/app/views/workshop_invitation_mailer/invite_student.html.haml
@@ -1,45 +1,42 @@
-=render partial: 'shared_mailers/header', locals: { title: "Workshop Student Invitation" }
-%body{ bgcolor: "#FFFFFF" }
+= render partial: 'shared_mailers/header', locals: { title: 'Workshop Student Invitation' }
+%body{ bgcolor: '#FFFFFF' }
 
-  =render partial: 'shared_mailers/body_header', locals: { title: "Workshop Student Invitation" }
+  = render partial: 'shared_mailers/body_header', locals: { title: 'Workshop Student Invitation' }
 
-  %table{ class: "body-wrap"}
+  %table{ class: 'body-wrap'}
     %tr
       %td
-      %td{ class: "container", bgcolor: "#FFFFFF" }
-
+      %td{ class: 'container', bgcolor: '#FFFFFF' }
         .content
           %table
             %tr
               %td
-                %h3 Hi, #{@member.name}
+                %h3 Hi #{@member.name},
                 %p.lead
                   If you would like to attend the workshop please RSVP as we need to know who is coming to make sure we have enough coaches and food.
                 %p
-                  In our workshops, you can work through any of our #{link_to "tutorials", "http://codebar.github.io/tutorials" } or get help and guidance on another technology for your personal project. We believe that everyone should be entitled to free learning and our community has #{ link_to "a lot of devoted developers", full_url_for(coaches_url)} who help out by coaching.
+                  In our workshops, you can work through any of our #{link_to 'tutorials', 'http://codebar.github.io/tutorials' } or get help and guidance on another technology for your personal project. We believe that everyone should be entitled to free learning and our community has #{ link_to 'a lot of devoted developers', full_url_for(coaches_url)} who help out by coaching.
                 %p You will also get the opportunity to meet other people interested in coding and collaborate with them.
                 %p Please note: We do not accept any RSVPs over email.
 
-                %p.callout If you are working through the tutorials outside our workshop, or need any other help or advice #{ link_to "join the codebar Slack", "https://codebar-slack.herokuapp.com"}.
-
+                %p.callout If you are working through the tutorials outside our workshop, or need any other help or advice #{ link_to 'join the codebar Slack', 'https://codebar-slack.herokuapp.com'}.
 
         .content
-          %table{ bgcolor: "#FFFFFF" }
+          %table{ bgcolor: '#FFFFFF' }
             %tr
-              %td.small{ width: "30%", style: "vertical-align: top; padding-right:10px;"}
-                =image_tag(@workshop.host.avatar, alt: @workshop.host.name)
-              %td
+              %td{ width: '60%', style: 'vertical-align: top; padding-right: 20px;' }
                 %h4
                   Workshop
                   %small= humanize_date(@workshop.date_and_time, with_time: true)
-                %p
-                  %b Venue
-                  #{@workshop.host.name}
-                =link_to "RSVP", full_url_for(invitation_url(@invitation)), class: 'btn'
+                = link_to 'View invitation and RSVP', full_url_for(invitation_url(@invitation)), class: 'btn'
+              %td{ width: '40%', style: 'vertical-align: top;'}
+                %h4
+                  Venue
+                  %small= @workshop.host.name
+                = image_tag(@workshop.host.avatar, alt: @workshop.host.name)
 
         .content
           = render partial: 'shared_mailers/social'
-
       %td
 
   = render partial: 'shared_mailers/footer'
