--- a/app/views/workshop_invitation_mailer/notify_waiting_list.html.haml
+++ b/app/views/workshop_invitation_mailer/notify_waiting_list.html.haml
@@ -1,12 +1,12 @@
-=render partial: 'shared_mailers/header', locals: { title: "Waiting List" }
-%body{ bgcolor: "#FFFFFF" }
+= render partial: 'shared_mailers/header', locals: { title: 'Waiting List' }
+%body{ bgcolor: '#FFFFFF' }
 
-  =render partial: 'shared_mailers/body_header', locals: { title: "Waiting List spot available" }
+  = render partial: 'shared_mailers/body_header', locals: { title: 'Waiting List spot available' }
 
-  %table{ class: "body-wrap"}
+  %table{ class: 'body-wrap'}
     %tr
       %td
-      %td{ class: "container", bgcolor: "#FFFFFF" }
+      %td{ class: 'container', bgcolor: '#FFFFFF' }
 
         .content
           %table
@@ -17,26 +17,36 @@
                   A spot just opened up for the workshop. If you would like to attend, please RSVP.
 
         .content
-          %table{ bgcolor: "#FFFFFF" }
+          %table{ bgcolor: '#FFFFFF' }
             %tr
-              %td.small{ width: "30%", style: "vertical-align: top; padding-right:10px;"}
-                =image_tag(@workshop.venue.avatar, @workshop.venue.name)
               %td
                 %h4
                   Workshop
                   %small #{humanize_date(@workshop.date_and_time, with_time: true)}
-                %p
-                  #{@workshop.venue.name}
-                  %br
-                  #{@host_address.to_html}
-                = link_to "RSVP", full_url_for(invitation_url(@invitation)), class: 'btn'
+                = link_to 'Update your attendance', full_url_for(invitation_url(@invitation)), class: 'btn'
 
         .content
           %table
             %tr
               %td
+                %h4 Venue
+            %tr
+              %td{ width: '70%', style: 'vertical-align: top; padding-right:20px;' }
                 %p
-                  If you have any trouble finding the venue call
+                  %strong #{@workshop.host.name}
+                  %br
+                  #{@host_address.to_html}
+                - if @host_address.directions
+                  %p
+                    %strong Directions:
+                    %br
+                    #{@host_address.directions}
+              %td{ width: '30%', style: 'vertical-align: top;' }
+                = image_tag(@workshop.host.avatar, alt: @workshop.host.name)
+            %tr
+              %td
+                %p
+                  If you have any trouble finding the venue, give us a call:
                   - @workshop.organisers.each do |organiser|
                     - if organiser.mobile.present?
                       %p
